[package]
name = "klee-examples"
version = "0.1.0"
authors = ["pln <Per Lindgren>"]
edition = "2018"

[dependencies]
panic-halt = "0.2.0"

vcell = "0.1.2"
volatile-register = "0.2.0"

[dependencies.lm3s6965] 
version = "0.1.3"
optional = true

[dependencies.cortex-m-semihosting]
version = "0.3.5"
optional = true

[dependencies.panic-klee]
git = "https://gitlab.henriktjader.com/pln/panic-klee.git"
version = "0.1.0"

[dependencies.klee-sys]
git = "https://gitlab.henriktjader.com/pln/klee-sys.git"
version = "0.1.0"

[dependencies.cortex-m-rtfm]
path = "../cortex-m-rtpro"
optional = true

[dependencies.cortex-m]
version = "0.6.0"
optional = true
# #features = ["inline-asm", "klee-analysis"]

[patch.crates-io]
vcell = { git = "https://github.com/perlindgren/vcell.git", branch = "trustit" }
# volatile-register = { git = "https://github.com/perlindgren/volatile-register.git" }
# cortex-m = { git = "https://github.com/perlindgren/cortex-m.git", branch = "klee-analysis" }


[features] 
klee-analysis = ["vcell/klee-analysis"]

[profile.dev]
panic = "abort"
incremental = false
lto = true

[profile.release]
debug = true
panic = "abort"
incremental = false
lto = true
