[package]
name = "runner"
version = "0.1.0"
authors = ["Per Lindgren <per.lindgren@ltu.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
probe-rs = { version = "0.3.0" }
ktest = { path = "../ktest", version = "0.1.0" }
failure = "0.1.6"
csv = "1.1"

[lib]
name = "runner"
